--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sb_fitness_tacker_app
 spring.datasource.username=root
 spring.datasource.password=1234
 
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
+logging.level.org.hibernate.sql=debug
