--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=FitnessTrackerApp
-spring.datasource.url=jdbc:mysql://localhost:3306/sb_fitness_tacker_app
+
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/sb_fitness_tracker_app
 spring.datasource.username=root
 spring.datasource.password=1234
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.show_sql=true
 logging.level.org.hibernate.sql=debug
